--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/grupo4_database
     username: root
-    password: 123456789
+    password: root
   jpa:
     show-sql: true
     hibernate:
